Minor fix: change some spelling mistakes, better statement structures, delete some unused statements